--- a/headers.tex
+++ b/headers.tex
@@ -29,11 +29,11 @@
 %%%%%%%%%%%%%%%%%%%%
 
 %\iffullversion
-    \usepackage{amsthm}
-    \newtheorem{theorem}{Theorem}
-    \newtheorem{definition}[theorem]{Definition}
-    \newtheorem{claim}[theorem]{Claim}
-    \newtheorem{lemma}[theorem]{Lemma}
+    % \usepackage{amsthm}
+    % \newtheorem{theorem}{Theorem}
+    % \newtheorem{definition}[theorem]{Definition}
+    % \newtheorem{claim}[theorem]{Claim}
+    % \newtheorem{lemma}[theorem]{Lemma}
 %\else
 %    \newtheorem{theorem}{Theorem}
 %\fi
