expanded compare, impl and tutorial sections

--- a/guidelines.tex
+++ b/guidelines.tex
@@ -60,5 +60,5 @@ It is widely know that a random oracle (RO) $h:\zo^* \to \zo^l$ can be used to i
 		\cite{DBLP:conf/tcc/FrederiksenJNT16} &  $\kappa$ OTs  &     \textbf{Yes}     &     Yes     &   \textbf{134 bits}    &   262 bits    & 524 bits &    \textbf{128 bits}    \\ \hline
 		Random Oracle             &      \textbf{ No}       &     No      &     \textbf{No}      &   256 bits    &   \textbf{256 bits}    & \textbf{256 bits} &    256 bits    \\\hline
 	\end{tabular}
-	\caption{Comparison to the standard random oracle commitment scheme.}
+	\caption{Comparison to the random oracle commitment scheme.}
 \end{figure}
