--- a/performance.tex
+++ b/performance.tex
@@ -6,6 +6,21 @@ To demonstrate the scalability of the implementation, we perform benchmarks on a
 
 We also benchmark our implementation in the 100Mbps WAN setting with a 80ms round trip latency. For $n=2^{24}$, committing  requires 75 seconds, 4.5 microseconds per commitment. Decommiting via sending both secret shares required 505 seconds, 30,2 microseconds per decommit, while the more communication efficient batch decommitment method required 316 seconds, 18.9 microseconds per decommitment.
 
+\begin{figure}
+\begin{center}
+  \small
+  \begin{tabular}{|c|c|c|c|}
+    \hline
+    Network & Commit & Decommit &\shortstack{Batch \\Decommit} \\ \hline
+    10Gbps LAN & \SI{0.65}{\micro\second} & \SI{0.32}{\micro\second} & \SI{0.27}{\micro\second} \\
+    100Mbps WAN & \SI{4.5}{\micro\second} & \SI{30.2}{\micro\second} & \SI{18.9}{\micro\second} \\
+    \hline
+  \end{tabular}
+  \caption{Amortized running times for $n = 2^{24}$ 128-bit values.}
+  \end{center}
+\end{figure}
+
 When performing bit commitments in the LAN setting, $n=2^{24}$ commitments to random bits requires 1.3 seconds and decommitting requires 2 seconds. Interestingly, batch decommitting is slightly slower, requiring 2.3 seconds to decommit. We attribute this to the reduction in communication being outweighed by the added computation that is required by batch decommit. Indeed, in the 100Mbps WAN setting where communication is more expensive, batch decommitting is faster, requiring 60 seconds as opposed to 61.
 
 In terms of communication overhead, committing to a random 128 bit value requires 134 bits, with an added 128 overhead for chosen message. Decommitting requires 524 bits, while batch decommitting only requires 128 bits with a constant additive overhead of 20,960 bits, independent of the number of decommitments. Committing to bits requires 40 bits of communication and decommitting requires 80 bits. Batch decommitting only requires a single bit of communication with a constant additive overhead of 3,200 bits, again independent of the number of decommitments considered.
+
