--- a/implementing.tex
+++ b/implementing.tex
@@ -2,17 +2,17 @@
 
 \section{Implementing}
 
-To obtain a high performance implementation, several of our most heavily used operations have been significantly optimized. In this section we highlight the most important ones. The most costly operation in \cite{DBLP:conf/tcc/FrederiksenJNT16} protocol is the matrix transpose that maps $m$ secret sharings of $n$ bit codewords to its transpose consisting of $n$ entries, each $m$ bits long. In order to perform this operation efficiently, the implementation employs optimizations originally developed for OT extension protocols. The main technique is to use special instructions available on modern Intel CPUs to accelerate the computation. The most notable of these instructions is \texttt{\_mm\_movemask\_epi8} which takes 16 bytes as input and returns a 16 bit number consisting of the least significant bit of each byte. By performing 8 of these operations interleaved with shifting the 16 bytes to the right allows for the efficient transpose of a $8\times 16$ bit matrix, requiring roughly $20\times$ fewer instructions.
-To obtain a high performance implementation, several of the most heavily used operations had to be significantly optimized. In this section we highlight the most important ones. The most costly operation in \cite{DBLP:conf/tcc/FrederiksenJNT16} protocol is the matrix transpose that maps $m$ secret sharings of $n$ bit codewords to its transpose consisting of $n$ entries, each $m$ bits long. In order to perform this operation efficiently, the implementation employs optimizations originally developed for OT extension protocols. The main technique is to use special instructions available on modern Intel CPUs to accelerate the computation. The most notable of these instructions is \texttt{\_mm\_movemask\_epi8} which takes 16 bytes as input and returns a 16 bit number consisting of the least significant bit of each byte. By performing 8 of these operations interleaved with shifting the 16 bytes to the right allows for the efficient transpose of a $8\times 16$ bit matrix, requiring roughly $20\times$ fewer instructions. 
+To obtain a high performance implementation, several of our most heavily used operations have been significantly optimized. In this section we highlight the most important ones. The most costly operation in the \cite{DBLP:conf/tcc/FrederiksenJNT16} protocol is the matrix transpose that maps $m$ secret sharings of $n$ bit codewords to its transpose consisting of $n$ entries, each $m$ bits long. In order to perform this operation efficiently, the implementation employs optimizations originally developed for OT extension protocols. The main technique is to use special instructions available on modern Intel CPUs to accelerate the computation. The most notable of these instructions is \texttt{\_mm\_movemask\_epi8} which takes 16 bytes as input and returns a 16 bit number consisting of the least significant bit of each byte. By performing 8 of these operations interleaved with shifting the 16 bytes to the right allows for the efficient transpose of a $8\times 16$ bit matrix, requiring roughly $20\times$ fewer instructions over a naive approach.
+
 \begin{figure}[h]
 	\centering
 \includegraphics[height=3cm,trim={2cm 10.5cm 7cm 3cm},clip]{dgrm}
 \caption{Diagram of the \texttt{\_mm\_movemask\_epi8} instruction mapping the LSB of 16 bytes to a 16 bit word.}
 \end{figure}
-This optimization was first observed in the cryptography community by the authors of the OT extension protocol~\cite{DBLP:conf/crypto/KellerOS15} and later described in a related work~\cite{DBLP:conf/ccs/KellerOS16}. While implementing this work and the related libOTe~\cite{libOTe} project, subsequent improvements on this technique have been made. In particular, we employ Intel vector operations to allow 8 simultaneously\footnote{Most modern Intel CPUs support 8 vector lanes.} \texttt{\_mm\_movemask\_epi8} instructions to be performed, resulting in even greater throughput. In total these optimizations yield several orders of magnitude improvements over a naive implementation and were essential in obtaining high performance.
+This optimization was first observed in the cryptography community by the authors of the OT extension protocol~\cite{DBLP:conf/crypto/KellerOS15} and later described in a related work~\cite{DBLP:conf/ccs/KellerOS16}. While implementing this work and the related libOTe~\cite{libOTe} project, subsequent improvements on this technique have been made. In particular, we employ Intel vector operations to allow 8 simultaneous \texttt{\_mm\_movemask\_epi8} instructions to be performed, resulting in even greater throughput.\footnote{Most modern Intel CPUs support 8 vector lanes.} In total these optimizations yield several orders of magnitude improvements over a naive implementation and were essential in obtaining high performance.
 
 
-Another computationally intensive operation is the construction of codewords that are subsequently secret shared. The most straight forward way to construct codewords $c\in\{0,1\}^n$     is by multiplying the plaintext word $p\in\{0,1\}^m$ interpreted as a bit vector ($\mathbb{F}_2^n$) by a bit matrix $G\in\{0,1\}^{m\times n}$ known as the generator. The result of this multiplication will be the desired codeword $c=Gp$. One important observation made by \cite{DBLP:conf/tcc/FrederiksenJNT16} is that a linear code can be placed in systematic form where codewords have the form $c=p||c'$, where $c'$ is a series of parity bits that can be computed with the generator matrix $G$. As such, only the parity bits $c'$ need to be computed using matrix multiplication. However, this computation can still dominate the running time if implemented naively. Namely, the naive method is to test each bit of the input and then add the corresponding row of the generator matrix to a running sum if the bit is set. When performing this operations for millions of inputs, it induces significant performance penalties due to the CPU not being able to effectively perform branch predication on the ``random" input bits, thus resulting in very poor instruction pipelining. 
+Another computationally intensive operation is the construction of codewords that are subsequently secret shared. The most straightforward way to construct codewords $c\in\{0,1\}^n$ is by multiplying the plaintext word $p\in\{0,1\}^m$ interpreted as a bit vector ($\mathbb{F}_2^n$) by a bit matrix $G\in\{0,1\}^{m\times n}$ known as the generator. The result of this multiplication will be the desired codeword $c=Gp$. One important observation made by \cite{DBLP:conf/tcc/FrederiksenJNT16} is that a linear code can be placed in systematic form where codewords have the form $c=p||c'$, where $c'$ is a series of parity bits that can be computed with the generator matrix $G$. As such, only the parity bits $c'$ need to be computed using matrix multiplication. However, this computation can still dominate the running time if implemented naively. Namely, the naive method is to test each bit of the input and then add the corresponding row of the generator matrix to a running sum if the bit is set. When performing this operations for millions of inputs, it induces significant performance penalties due to the CPU not being able to effectively perform branch predication on the ``random" input bits, thus resulting in very poor instruction pipelining. 
 
 Intuitively, we overcome this challenge by performing this conditional operation on a whole byte as opposed to single bits. This has several advantages: 1) fewer conditionals are performed. 2) branch prediction is much more effective due to being conditioned on a whole byte.  3) The resulting operations can compatible with instruction vectorization. To enable this optimization, a pre-processing on the generator matrix $G$ is performed. $G$ is first decomposed into $G_1,...,G_{m/8}$ where $G_i$ is the $i$th set of 8 rows of the matrix $G$. For each $G_i$ and $s\in\mathbb{F}_2^8$, the value $G_is$ is computed and stored in a lookup table. Matrix multiplication by $G$ can then be reduced to
 \[
