--- a/tutorial.tex
+++ b/tutorial.tex
@@ -102,7 +102,7 @@ in lieu of the \texttt{XOR\_128} function. In addition, when performing homomorp
 
 \subsection{Chosen Message}
 
-To use this library with chosen messages, additional work is required by the user. The central idea is that a commitment to a random value can be translated to a commitment of a chosen value simply by publishing the XOR difference between the two values, effectively forming a one-time-pad encryption under the random value which is committed. The user must maintain this ``translation" value for each commitment that it holds. To then perform homomorphic operations, the corresponding translation value must also be XOR-ed together, resulting in the translation value for resulting commitment. In particular, shown below is the operations for the sender to translate the 128 bit random commitments made above to chosen message commitments. The value contained in \texttt{translation2} when XORed with the decommitted value of \texttt{new\_commit} will result in the XOR of \texttt{chosen\_message0} and \texttt{chosen\_message1}.
+To use this library with chosen messages, additional work is required by the user. The central idea is that a commitment to a random value can be translated to a commitment of a chosen value simply by publishing the XOR difference between the two values, effectively forming a one-time-pad encryption under the random value which is committed. The user must maintain this ``translation" value for each commitment that it holds. To then perform homomorphic operations, the corresponding translation value must also be XOR-ed together, resulting in the translation value for resulting commitment. In particular, shown below are the operations for the sender to translate the 128 bit random commitments made above to chosen message commitments. The value contained in \texttt{translation2} when XORed with the decommitted value of \texttt{new\_commit} will result in the XOR of \texttt{chosen\_message0} and \texttt{chosen\_message1}.
 \begin{lstlisting}     
 ...
 
