--- a/performance.tex
+++ b/performance.tex
@@ -19,7 +19,7 @@ We also benchmark our implementation in the 100Mbps WAN setting with a 80ms roun
   	                     &  1Gbps LAN  &  0.22  &   0.56   &             0.57              \\
   	                     & 100Mbps WAN &  0.56  &   1.5    &              1.6              \\ \hline
   \end{tabular}
-  \caption{Amortized running times in microseconds ($\mu s$) for $n = 2^{24}$ 128-bit values.}
+  \caption{Amortized running times in microseconds ($\mu s$) for $n = 2^{24}$ commitments.}
   \end{center}
 \end{figure}
 
