updated numbers in text

--- a/main.tex
+++ b/main.tex
@@ -62,11 +62,11 @@
 \begin{document}
 	
 	\title{SplitCommit:\\ Implementing and Analyzing Homomorphic UC Commitments%
-	\thanks{The first author is supported by an ARCS foundation fellowship. This project has received funding from the European Union's Horizon 2020 research and innovation programme under grant agreement No 731583 (SODA).}}
+	}
 	
 	
 	\author{
-		Peter Rindal\inst{1} \and Roberto Trifiletti\inst{2}
+		Peter Rindal\inst{1} \and Roberto Trifiletti\inst{2}\thanks{The first author is supported by an ARCS foundation fellowship. This project has received funding from the European Union's Horizon 2020 research and innovation programme under grant agreement No 731583 (SODA).}
 		\institute{Oregon State University
 		\\ \email{rindalp@oregonstate.edu} \and
 		Aarhus University
